<resources>
    <string name="app_name">Agenda CouchDB</string>
    <string name="buscar">Buscar Amigos</string>
    <string name="nombre">Nombres</string>
    <string name="telefono">Telefono</string>
    <string name="direccion">Direccion fisica donde vives</string>
    <string name="correo">Correo Electronico</string>
    <string name="guardar">Guardar Amigo</string>
    <string name="agregar">Agregar</string>
    <string name="modificar">Modificar</string>
    <string name="eliminar">Eliminar</string>
</resources>